--- a/index.html
+++ b/index.html
@@ -9,25 +9,34 @@
 	</head>
 
 	<body>
-		<div class="header">
-			<h1>My name is Dionisii Kolomytsev</h1>
-		</div>
+                <div class="header">
+                        <h1>My name is Dionisii Kolomytsev</h1>
+                </div>
 
-		<div class="cv">
-		<div class="description">
-			<p>Front-end developer at the start of the learning way. In general, I am an ecologist with a wide range of interests in science (10 years in the research department, chemistry) and engineering fields. Also, have a professional background in solar system engineering.<br><br> I like woodworking and other DIYs, also bicycling, reading, etc.<br><br> Now I am studying programming at the SH++ school.</p>
-		</div>
+                <div class="cv">
+                        <div class="description">
+                                <p>Front-end developer at the start of the learning way. In general, I am an ecologist with a wide range of interests in science (10 years in the research department, chemistry) and engineering fields. Also, have a professional background in solar system engineering.<br><br> I like woodworking and other DIYs, also bicycling, reading, etc.<br><br> Now I am studying programming at the SH++ school.</p>
+                        </div>
 
-		<div class="image">
-			<img src="image.png" alt="ecology emblem"  width="200" height="250">
-		</div>
-		</div>
-		<div class="footer">
-			<p class="mail"><a href="mailto:dolopichtis@gmail.com">Send me email</a></p>
-			<a class="git"  href="dolopichtis.github.io">
-				<img src="github_logo_white.png" alt="github" style="width:42px;height:42px;">
-			</a>
-		</div>
-	
-	</body>
+                        <div class="image">
+                                <img src="image.png" alt="ecology emblem"  width="200" height="250">
+                        </div>
+                </div>
+                <div class="footer">
+                        <p class="mail"><a href="mailto:dolopichtis@gmail.com">Send me email</a></p>
+                        <a class="git"  href="dolopichtis.github.io">
+                                <img src="github_logo_white.png" alt="github" style="width:42px;height:42px;">
+                        </a>
+                </div>
+                <h1>My works </h1>
+                <ul>
+                        <li>
+                                <a href="https://dolopichtis.github.io/di-gi/">
+                                        <h2>Simple web-page. Basics: html and css</h2>
+                                        <img src="images/opengraph.png" alt="work screenshort" width="400px" height="200px">
+                                </a>
+                        </li>
+                </ul>
+
+        </body>
 </html>
