add js in my work

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
                                         <img src="images/opengraph.png" alt="work screenshort" width="400px" height="200px">
                                 </a>
                         </li>
+                        <li>
+                                <a href="https://dolopichtis.github.io/js/">
+                                        <h2>Simple web-page. Basics: JS</h2>
+                                        <img src="images/js.png" alt="js practice page screenshort" width="400px" height="200px">
+                                </a>
+                        </li>
                 </ul>
 
         </body>
