add functional part

--- a/index.html
+++ b/index.html
@@ -31,15 +31,21 @@
                 <h1>My works </h1>
                 <ul>
                         <li>
-                                <a href="https://dolopichtis.github.io/di-gi/">
+                                <a href="https://dolopichtis.github.io/studying-portfolio/di-gi/">
                                         <h2>Simple web-page. Basics: html and css</h2>
                                         <img src="images/opengraph.png" alt="work screenshort" width="400px" height="200px">
                                 </a>
                         </li>
                         <li>
-                                <a href="https://dolopichtis.github.io/js/">
+                                <a href="https://dolopichtis.github.io/studying-portfolio/js/pureJS/">
                                         <h2>Simple web-page. Basics: JS</h2>
                                         <img src="images/js.png" alt="js practice page screenshort" width="400px" height="200px">
+                                </a>
+                        </li>
+                        <li>
+                                <a href="https://dolopichtis.github.io/studying-portfolio/js/functionalJS/">
+                                        <h2>Simple web-page. Functional: JS</h2>
+                                        <img src="images/func-js.png" alt="js practice page screenshort" width="400px" height="200px">
                                 </a>
                         </li>
                 </ul>
