remove folder with projects

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="footer">
                         <p class="mail"><a href="mailto:dolopichtis@gmail.com">Send me email</a></p>
-                        <a class="git"  href="dolopichtis.github.io">
+                        <a class="git"  href="github.com/dolopichtis">
                                 <img src="github_logo_white.png" alt="github" style="width:42px;height:42px;">
                         </a>
                 </div>
@@ -45,7 +45,13 @@
                         <li>
                                 <a href="https://dolopichtis.github.io/studying-portfolio/js/functionalJS/">
                                         <h2>Simple web-page. Functional: JS</h2>
-                                        <img src="images/func-js.png" alt="js practice page screenshort" width="400px" height="200px">
+                                        <img src="images/func-js.png" alt="functional js practice page screenshort" width="400px" height="200px">
+                                </a>
+                        </li>
+                        <li>
+                                <a href="https://dolopichtis.github.io/studying-portfolio/tables/">
+                                        <h2>Simple web-page. Simple add-table JS lib</h2>
+                                        <img src="images/tables.png" alt="add tables js-lib practice page screenshort" width="400px" height="200px">
                                 </a>
                         </li>
                 </ul>
