--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
                                 </a>
                         </li>
                 </ul>
-
+<script src='banner-test.js'></script>
         </body>
 </html>
